--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
-    "name": "six-cities",
-    "version": "1.0.0",
-    "private": true,
-    "description": "Личный проект «Шесть городов» от HTML Academy",
-    "scripts": {
-        "build": "webpack --mode production",
-        "start": "webpack-dev-server",
-        "eslint": "eslint --ext .jsx --ext .js src/",
-        "test": "npm run eslint"
-    },
-    "devDependencies": {
-        "@babel/core": "7.8.4",
-        "@babel/preset-env": "7.8.4",
-        "@babel/preset-react": "7.8.3",
-        "babel-loader": "8.0.6",
-        "eslint": "5.13.0",
-        "eslint-config-htmlacademy": "0.5.2",
-        "eslint-plugin-react": "7.18.3",
-        "webpack": "4.41.5",
-        "webpack-cli": "3.3.10",
-        "webpack-dev-server": "3.10.2"
-    },
-    "engines": {
-        "node": "10"
-    },
-    "dependencies": {
-        "prop-types": "15.7.2",
-        "react": "16.12.0",
-        "react-dom": "16.12.0"
-    }
+  "name": "six-cities",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Личный проект «Шесть городов» от HTML Academy",
+  "scripts": {
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server",
+    "eslint": "eslint --ext .jsx --ext .js src/",
+    "test": "npm run eslint && npm run test.jest",
+    "test.jest": "jest"
+  },
+  "devDependencies": {
+    "@babel/core": "7.8.4",
+    "@babel/preset-env": "7.8.4",
+    "@babel/preset-react": "7.8.3",
+    "babel-jest": "25.1.0",
+    "babel-loader": "8.0.6",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
+    "eslint": "5.13.0",
+    "eslint-config-htmlacademy": "0.5.2",
+    "eslint-plugin-react": "7.18.3",
+    "jest": "25.1.0",
+    "react-test-renderer": "16.12.0",
+    "webpack": "4.41.5",
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "3.10.2"
+  },
+  "engines": {
+    "node": "10"
+  },
+  "dependencies": {
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
+  }
 }
